Fixes at CSS form fields alignment

--- a/Frontend/app/styles/scss/base/_forms.scss
+++ b/Frontend/app/styles/scss/base/_forms.scss
@@ -316,6 +316,8 @@ form.form-block{
 			box-shadow: none;
 			font-family: $font-2;
 			font-size: 14px;
+			margin-top: 0px;
+			padding-top: 0px;
 		}
 
 		textarea[readonly="readonly"]{
